--- a/donate/long.html
+++ b/donate/long.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.baad5a4e.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.5ee67b30.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.e6145de3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9172f7d8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.871577b9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.7db1e225.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.077ce2a9.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.c4f5a426.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.30687581.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.7a53ee0c.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.173a057d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.701b69b6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.180c8d16.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.a030ffc5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.4c65f21c.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
@@ -48,19 +48,19 @@
 			
 			<script>
 				{
-					__sveltekit_ztl2vw = {
+					__sveltekit_1ohyg6s = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
 					};
 
-					const data = [{"type":"data","data":null,"uses":{}},null,null];
+					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.5ee67b30.js"),
-						import("../_app/immutable/entry/app.7db1e225.js")
+						import("../_app/immutable/entry/start.e6145de3.js"),
+						import("../_app/immutable/entry/app.c4f5a426.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_ztl2vw.element, {
+						kit.start(app, __sveltekit_1ohyg6s.element, {
 							node_ids: [0, 2, 7],
 							data,
 							form: null,
