--- a/donate/zec.html
+++ b/donate/zec.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.baad5a4e.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.2b780c40.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.5ee67b30.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.e6145de3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9172f7d8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.871577b9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.7db1e225.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.077ce2a9.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.c4f5a426.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.30687581.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.7a53ee0c.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.173a057d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.701b69b6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.180c8d16.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.ef034390.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.835184a0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.73e3b557.js">
@@ -47,19 +47,19 @@
 			
 			<script>
 				{
-					__sveltekit_ztl2vw = {
+					__sveltekit_1ohyg6s = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
 					};
 
-					const data = [{"type":"data","data":null,"uses":{}},null,null];
+					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.5ee67b30.js"),
-						import("../_app/immutable/entry/app.7db1e225.js")
+						import("../_app/immutable/entry/start.e6145de3.js"),
+						import("../_app/immutable/entry/app.c4f5a426.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_ztl2vw.element, {
+						kit.start(app, __sveltekit_1ohyg6s.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
