--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<link href="./_app/immutable/assets/_layout.baad5a4e.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.5ee67b30.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e6145de3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9172f7d8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.871577b9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.7db1e225.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.077ce2a9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.c4f5a426.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.30687581.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.7a53ee0c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.701b69b6.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.a1e656f0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.4c65f21c.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
 	</head>
@@ -92,19 +92,19 @@
 			
 			<script>
 				{
-					__sveltekit_ztl2vw = {
+					__sveltekit_1ohyg6s = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
 					};
 
-					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
+					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.5ee67b30.js"),
-						import("./_app/immutable/entry/app.7db1e225.js")
+						import("./_app/immutable/entry/start.e6145de3.js"),
+						import("./_app/immutable/entry/app.c4f5a426.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_ztl2vw.element, {
+						kit.start(app, __sveltekit_1ohyg6s.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
